--- a/htdocs/include/header.include.html
+++ b/htdocs/include/header.include.html
@@ -12,6 +12,16 @@
             <div class="button" data-toggle-panel="openwebrx-panel-receiver"><svg viewBox="0 0 80 80"><use xlink:href="${document_root}static/gfx/svg-defs.svg#panel-receiver"></use></svg><br/>Receiver</div>
             <a class="button" href="${document_root}map" target="openwebrx-map"><svg viewBox="0 0 80 80"><use xlink:href="${document_root}static/gfx/svg-defs.svg#panel-map"></use></svg><br/>Map</a>
             <a class="button" href="${document_root}settings" target="openwebrx-settings"><svg viewBox="0 0 80 80"><use xlink:href="${document_root}static/gfx/svg-defs.svg#panel-settings"></use></svg><br/>Settings</a>
+
+            <!-- session timeout and use policy page display -->
+            <p id="pstt"></p>
+            <script>
+                var path = window.location.pathname;
+                var page = path.split("/").pop();
+                document.getElementById("pstt").innerHTML =
+                    (page==="") && (${session_timeout}>0)?
+                    "<meta http-equiv=\"refresh\" content=\"${session_timeout}; url=${usage_policy_url}\">" : "";
+            </script>
         </section>
     </div>
     <div class="openwebrx-description-container">
