Adding infrastructure for the radio fax decoder.

--- a/htdocs/css/openwebrx.css
+++ b/htdocs/css/openwebrx.css
@@ -1221,6 +1221,29 @@ img.openwebrx-mirror-img
     cursor: pointer;
 }
 
+#openwebrx-panel-fax-message {
+    height: 310px;
+    width: 365px;
+    max-width: 365px;
+}
+
+#openwebrx-panel-fax-message tbody {
+    height: 280px;
+    width: 360px;
+    max-width: 360px;
+}
+
+#openwebrx-panel-fax-message .message {
+    width: 360px;
+    max-width: 360px;
+    white-space: pre;
+}
+
+#openwebrx-panel-fax-message .frame {
+    border: 2px dotted white;
+    cursor: pointer;
+}
+
 .aprs-symbol {
     display: inline-block;
     width: 15px;
@@ -1309,6 +1332,7 @@ img.openwebrx-mirror-img
 #openwebrx-panel-digimodes[data-mode="fst4w"]  #openwebrx-digimode-content-container,
 #openwebrx-panel-digimodes[data-mode="q65"]    #openwebrx-digimode-content-container,
 #openwebrx-panel-digimodes[data-mode="sstv"]   #openwebrx-digimode-content-container,
+#openwebrx-panel-digimodes[data-mode="fax"]    #openwebrx-digimode-content-container,
 #openwebrx-panel-digimodes[data-mode="ft8"]    #openwebrx-digimode-select-channel,
 #openwebrx-panel-digimodes[data-mode="wspr"]   #openwebrx-digimode-select-channel,
 #openwebrx-panel-digimodes[data-mode="jt65"]   #openwebrx-digimode-select-channel,
@@ -1322,6 +1346,7 @@ img.openwebrx-mirror-img
 #openwebrx-panel-digimodes[data-mode="fst4w"]  #openwebrx-digimode-select-channel,
 #openwebrx-panel-digimodes[data-mode="q65"]    #openwebrx-digimode-select-channel,
 #openwebrx-panel-digimodes[data-mode="sstv"]   #openwebrx-digimode-select-channel
+#openwebrx-panel-digimodes[data-mode="fax"]    #openwebrx-digimode-select-channel
 {
     display: none;
 }
@@ -1339,6 +1364,7 @@ img.openwebrx-mirror-img
 #openwebrx-panel-digimodes[data-mode="fst4w"]  #openwebrx-digimode-canvas-container,
 #openwebrx-panel-digimodes[data-mode="q65"]    #openwebrx-digimode-canvas-container,
 #openwebrx-panel-digimodes[data-mode="sstv"]   #openwebrx-digimode-canvas-container
+#openwebrx-panel-digimodes[data-mode="fax"]    #openwebrx-digimode-canvas-container
 {
     height: 200px;
     margin: -10px;
