--- a/htdocs/css/openwebrx.css
+++ b/htdocs/css/openwebrx.css
@@ -1420,4 +1420,5 @@ img.openwebrx-mirror-img
 .openwebrx-spectrum-container.expanded {
     opacity: 1;
     height: 50px;
+    border-bottom: 2px solid white;
 }
