Fixed section title font.

--- a/htdocs/css/openwebrx.css
+++ b/htdocs/css/openwebrx.css
@@ -416,7 +416,7 @@ input[type=range]:disabled {
 	background: -moz-linear-gradient( center top, #373737 0%, #4F4F4F 100% );
 }
 
-.webrx-mouse-freq {
+.webrx-mouse-freq. .openwebrx-section-divider {
 	width: 100%;
 	text-align: left;
 	font-size: 10pt;
@@ -1428,7 +1428,6 @@ img.openwebrx-mirror-img
     margin-bottom: 5px;
     margin-top: 5px;
     min-height: 5px;
-    color: #aaa;
 }
 
 .openwebrx-section {
