--- a/htdocs/css/openwebrx.css
+++ b/htdocs/css/openwebrx.css
@@ -1432,6 +1432,12 @@ img.openwebrx-mirror-img
     text-align: left;
     font-size: 10pt;
     color: #AAA;
+    user-select: none;
+    -webkit-touch-callout: none;
+    -webkit-user-select: none;
+    -khtml-user-select: none;
+    -moz-user-select: none;
+    -ms-user-select: none;
 }
 
 .openwebrx-section {
